[-] BO : Fix bug #PSCSX-3888, No "size limit" for the icon on Firefox

--- a/admin-dev/themes/default/sass/controllers/_modules.sass
+++ b/admin-dev/themes/default/sass/controllers/_modules.sass
@@ -147,3 +147,8 @@ td.module_inactive
 		&.active~span.star:before
 			content: "\f005"
 			color: #F5AB35
+
+#modules_list_container_tab_modal
+	.img-thumbnail
+		max-width: 60px
+		max-height: 60px
